--- a/index.html
+++ b/index.html
@@ -52,6 +52,9 @@
    <!--==================== CSS ====================-->
    <link rel="stylesheet" href="./packages/css/styles.css">
 
+<!-----------------adness-->
+   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5696352911344680"
+     crossorigin="anonymous"></script>
 
 
 
