--- a/index.html
+++ b/index.html
@@ -109,7 +109,11 @@ Copyright <script>document.write(new Date().getFullYear());</script>  All rights
 						<div class="col-md-12">
 							<div class="row row-bottom-padded-sm animate-box fadeInLeft animated" data-animate-effect="fadeInLeft">
 								<div class="col-md-12">
-									<div class="about-desc">
+									<div class="about-desc">        
+										
+										<center>
+										<h2 class="mx-3">Software developer</h2>
+									    </center>
 										<span class="heading-meta">About Me</span>
 										<h2 class="colorlib-heading">Who Am I?</h2>
 										<p>I'm an undergraduate holder at Mzumbe University with a Bachelor of Information and Communication Technology with Business (BCs. ICT-B), passionate about technology and an avid reader. I have a self-motivated and can-do attitude, 
