--- a/index.html
+++ b/index.html
@@ -102,7 +102,9 @@ Copyright <script>document.write(new Date().getFullYear());</script>  All rights
 		</small></aside><small>
 
 		<div id="colorlib-main">
- 
+			<center>
+				<h2 class="mx-3 text-primary">Software developer</h2>
+				</center>
 			<section class="colorlib-about" data-section="about">
 				<div class="colorlib-narrow-content">
 					<div class="row">
@@ -111,9 +113,7 @@ Copyright <script>document.write(new Date().getFullYear());</script>  All rights
 								<div class="col-md-12">
 									<div class="about-desc">        
 										
-										<center>
-										<h2 class="mx-3">Software developer</h2>
-									    </center>
+										
 										<span class="heading-meta">About Me</span>
 										<h2 class="colorlib-heading">Who Am I?</h2>
 										<p>I'm an undergraduate holder at Mzumbe University with a Bachelor of Information and Communication Technology with Business (BCs. ICT-B), passionate about technology and an avid reader. I have a self-motivated and can-do attitude, 
